Aggiunto alle migration del database utente admin con email: "admin@gmail.com" e password: "admin". Aggiunto pulsante per aggiungere esercizi nella pagina exercises. Il pulsante, visibile solo dall'admin, apre un popup che contiene i campi necessari per l'insert nel database.